# streaming-network

./: .gitignore  LICENSE  Makefile  cabal.config  streaming-network.cabal
example/: Main.hs
src/Data/Attoparsec/DSL/: Builder.hs  Mapper.hs  Template.hs
src/Streaming/Network/Client/: Telnet.hs
src/Streaming/Network/Client/Telnet/: Cmd.hs  Parser.hs
