name:                streaming-network
version:             0.1.0.0
description:         A network client for parsing telnet and ssh streams using Streaming and Attoparsec
license:             Apache-2.0
license-file:        LICENSE
author:              Brian Jones
maintainer:          bcj@alasconnect.com
copyright:           2018 AlasConnect
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Network.Client.Telnet
                     , Streaming.Network.Client.Telnet.Cmd
                     , Streaming.Network.Client.Telnet.Parser
  build-depends:       base >=4.10 && <4.11
                     , attoparsec >=0.13
                     , bytestring >=0.10
                     , network-simple
                     , mtl
                     , streaming
                     , streaming-bytestring
                     , streaming-utils
  hs-source-dirs:      src
  default-language:    Haskell2010

executable streaming-network-example
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , streaming-network
                     , attoparsec >=0.13
                     , bytestring >=0.10
  hs-source-dirs:      example
  default-language:    Haskell2010
